chore: implement update players through google sheet
